enhancement: configuration variable 'teryt.show_numeric_identifiers' with 'false' as default allows to enable numeric TERYT identifier presentation near customer addresses (missed location name presentation re-added)

--- a/templates/default/customer/customerinfobox.html
+++ b/templates/default/customer/customerinfobox.html
@@ -201,6 +201,7 @@
 												</td>
 												<td>
 													<span title="{trans('billing address')}">
+														{if $v.location_name}{$v.location_name|escape}, {/if}
 														{if $v.teryt}
 															{if $show_numeric_identifiers}
 																{capture assign="teryt_comment"}{strip}
@@ -234,17 +235,22 @@
 												</td>
 												<td>
 													<span title="{trans('postal address')}">
-														{if $show_numeric_identifiers}
-															{capture assign="teryt_comment"}{strip}
-																{if empty($v.location_street)}
-																	{t a=$v.terc b=$v.simc}<span class="nobr">TERC: $a,</span> <span class="nobr">SIMC: $b</span>{/t}
-																{else}
-																	{t a=$v.terc b=$v.simc c=$v.ulic}<span class="nobr">TERC: $a,</span> <span class="nobr">SIMC: $b,</span> <span class="nobr">ULIC: $c</span>{/t}
-																{/if}
-															{/strip}{/capture}
-															{t a=$v.location|default:""|escape b=$teryt_comment}$a ($b){/t}
+														{if $v.location_name}{$v.location_name|escape}, {/if}
+														{if $v.teryt}
+															{if $show_numeric_identifiers}
+																{capture assign="teryt_comment"}{strip}
+																	{if empty($v.location_street)}
+																		{t a=$v.terc b=$v.simc}<span class="nobr">TERC: $a,</span> <span class="nobr">SIMC: $b</span>{/t}
+																	{else}
+																		{t a=$v.terc b=$v.simc c=$v.ulic}<span class="nobr">TERC: $a,</span> <span class="nobr">SIMC: $b,</span> <span class="nobr">ULIC: $c</span>{/t}
+																	{/if}
+																{/strip}{/capture}
+																{t a=$v.location|default:""|escape b=$teryt_comment}$a ($b){/t}
+															{else}
+																{t a=$v.location|default:""|escape}$a (TERYT){/t}
+															{/if}
 														{else}
-															{t a=$v.location|default:""|escape}$a (TERYT){/t}
+															{$v.location|escape}
 														{/if}
 														<a href="{$gps_location_url|replace:"%location":$v.location|replace:"%state":$v.location_state_name|replace:"%city":$v.location_city_name|replace:"%zip":$v.location_zip|replace:"%street":$v.location_street_name|replace:"%full_street":$v.location_full_street_name|replace:"%full_reversed_street":$v.location_full_reversed_street_name|replace:"%short_street":$v.location_short_street_name|replace:"%house":$v.location_house|escape}"
 															title="{trans("Show on map")}">{icon name="location"}</a>
@@ -271,17 +277,22 @@
 												</td>
 												<td>
 													<span title="{$title}">
-														{if $show_numeric_identifiers}
-															{capture assign="teryt_comment"}{strip}
-																{if empty($v.location_street)}
-																	{t a=$v.terc b=$v.simc}TERC: $a, SIMC: $b{/t}
-																{else}
-																	{t a=$v.terc b=$v.simc c=$v.ulic}TERC: $a, SIMC: $b, ULIC: $c{/t}
-																{/if}
-															{/strip}{/capture}
-															{t a=$v.location|default:""|escape b=$teryt_comment}$a ($b){/t}
+														{if $v.location_name}{$v.location_name|escape}, {/if}
+														{if $v.teryt}
+															{if $show_numeric_identifiers}
+																{capture assign="teryt_comment"}{strip}
+																	{if empty($v.location_street)}
+																		{t a=$v.terc b=$v.simc}TERC: $a, SIMC: $b{/t}
+																	{else}
+																		{t a=$v.terc b=$v.simc c=$v.ulic}TERC: $a, SIMC: $b, ULIC: $c{/t}
+																	{/if}
+																{/strip}{/capture}
+																{t a=$v.location|default:""|escape b=$teryt_comment}$a ($b){/t}
+															{else}
+																{t a=$v.location|default:""|escape}$a (TERYT){/t}
+															{/if}
 														{else}
-															{t a=$v.location|default:""|escape}$a (TERYT){/t}
+															{$v.location|default:""|escape}
 														{/if}
 														<a href="{$gps_location_url|replace:"%location":$v.location|replace:"%state":$v.location_state_name|replace:"%city":$v.location_city_name|replace:"%zip":$v.location_zip|replace:"%street":$v.location_street_name|replace:"%full_street":$v.location_full_street_name|replace:"%full_reversed_street":$v.location_full_reversed_street_name|replace:"%short_street":$v.location_short_street_name|replace:"%house":$v.location_house|escape}"
 															title="{trans("Show on map")}">{icon name="location"}</a>
