enhancement: separate 'without explicit TERYT' and 'without TERYT' filters for nodes

--- a/templates/default/welcome/welcome_summaries.html
+++ b/templates/default/welcome/welcome_summaries.html
@@ -46,10 +46,18 @@
         </tr>
         <tr>
             <td class="text-right bold">
-                <a href="?m=nodelist&amp;s=5">{trans("<!welcome>TERYT not specified")}:</a>
+                <a href="?m=nodelist&s=5">{trans("<!welcome>Without explicit TERYT")}:</a>
             </td>
             <td>
-                {$nodestats.withoutterryt}
+                {$nodestats.withoutexplicitteryt}
+            </td>
+        </tr>
+        <tr>
+            <td class="text-right bold">
+                <a href="?m=nodelist&s=11">{trans("<!welcome>Without TERYT")}:</a>
+            </td>
+            <td>
+                {$nodestats.withoutteryt}
             </td>
         </tr>
         <tr>
