--- a/templates/default/node/nodesearch.html
+++ b/templates/default/node/nodesearch.html
@@ -106,7 +106,8 @@
 				<option value="2"{if $nodesearch.status == 2} selected{/if}>{trans("disconnected<!plural:item>")}</option>
 				<option value="3"{if $nodesearch.status == 3} selected{/if}>{trans("online")}</option>
 				<option value="4"{if $nodesearch.status == 4} selected{/if}>{trans("without tariff")}</option>
-				<option value="5"{if $nodesearch.status == 5} selected{/if}>{trans("TERYT not specified")}</option>
+				<option value="5"{if $nodesearch.status == 5} selected{/if}>{trans("without explicit TERYT")}</option>
+				<option value="11"{if $nodesearch.status == 11} selected{/if}>{trans("without TERYT")}</option>
 				<option value="6"{if $nodesearch.status == 6} selected{/if}>{trans("Net Device not specified")}</option>
 				<option value="9"{if $nodesearch.status == 9} selected{/if}>{trans("without radio sector")}</option>
 				<option value="7"{if $nodesearch.status == 7} selected{/if}>{trans("with warning")}</option>
