--- a/templates/default/note/noteadd.html
+++ b/templates/default/note/noteadd.html
@@ -100,6 +100,14 @@
 		</tr>
 		<tr>
 			<td class="nobr">
+				<strong>{trans("Payment type:")}</strong>
+			</td>
+			<td class="nobr">
+				{paytypes elemname="note[paytype]" selected=$note.paytype form="setcustomer"}
+			</td>
+		</tr>
+		<tr>
+			<td class="nobr">
 				<strong>{trans("Customer:")}</strong>
 			</td>
 			<td class="nobr">
