--- a/templates/default/netdev/netdevconnbox.html
+++ b/templates/default/netdev/netdevconnbox.html
@@ -186,10 +186,20 @@
 						<SELECT NAME="netdev" id="srcnetdev" {tip class="lms-ui-advanced-select" trigger="link" text="Select from list device for connection"}
 								onchange="get_radio_sectors_for_netdev()" form="connect-form">
 							{foreach $restnetdevlist as $dev}
-							{assign var=netdevname value=$dev.name}
-							{if $dev.producer}{assign var=netdevname value=$netdevname|cat:" / "|cat:$dev.producer}{/if}
-							{if $dev.location}{assign var=netdevname value=$netdevname|cat:" ("|cat:$dev.location|cat:")"}{/if}
-							<OPTION VALUE="{$dev.id}"{if $connect.id == $dev.id} selected{/if}>{$netdevname|truncate:120:"&hellip;":true}</OPTION>
+								{$netdevname = $dev.name}
+								{if $dev.producer}
+									{$netdevname = $netdevname|cat:" / "|cat:$dev.producer}
+								{/if}
+								{if $dev.location}
+									{$netdevname = $netdevname|cat:" ("|cat:$dev.location|cat:")"}
+								{/if}
+								<option value="{$dev.id}"{if $connect.id == $dev.id} selected{/if}>{strip}
+									{if !empty($dev.netnodeid)}
+										[{$dev.netnodename|escape}]
+										&nbsp;
+									{/if}
+									{$netdevname|trunescape:120}
+								{/strip}</option>
 							{/foreach}
 						</SELECT>
 						<a href="javascript: void(0);" onclick="return netDevChooseWin(document.connect.elements['netdev'], {$netdev.id});" {tip trigger="netdev" text="Search device"}>&raquo;&raquo;&raquo;</A>
