improvement: uke/pit: 'full report' can filter customer services sheet by optionally selected division/company in corresponding form field/element (LMS+ #2223)

--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -2040,8 +2040,7 @@
 			<td>
 				<select size="1" name="division" form="uke-pit"
 					id="uke-pit-division"
-					{tip text="Select division"}
-					disabled>
+					{tip text="Select division"}>
 					<option value="0">- {trans("all")} -</option>
 					{foreach $divisions as $item}
 						<option value="{$item.id}">{$item.label|escape}</option>
@@ -2160,7 +2159,7 @@
 	$(function() {
 		$('[name="report-type"]').change(function() {
 			var checked = $(this).prop('checked') && $(this).is('[value="customer-services"]');
-			$('#uke-pit-aggregate-customer-services,#uke-pit-division').prop('disabled', !checked).closest('tr').find('label').toggleClass('lms-ui-disabled', !checked);
+			$('#uke-pit-aggregate-customer-services').prop('disabled', !checked).closest('tr').find('label').toggleClass('lms-ui-disabled', !checked);
 		});
 	});
 
