enhancement: show network node info in rows which represent connected network devices

--- a/css/templates/netdev/netdevconnbox.less
+++ b/css/templates/netdev/netdevconnbox.less
@@ -24,10 +24,13 @@
 
 #devicedevices {
 	.name {
-		width: 20em;
+		width: 15em;
+	}
+	.netnode {
+		width: 10em;
 	}
 	.location {
-		width: 20em;
+		width: 15em;
 	}
 	.link-tech {
 		width: 10em;
@@ -78,9 +81,9 @@
 				width: 100% !important;
 			}
 		}
-		.name-location {
+		.name-netnode-location {
 			flex-direction: column !important;
-			width: 20em !important;
+			width: 10em !important;
 			div {
 				flex-grow: 0 !important;
 				width: 100% !important;
@@ -108,7 +111,7 @@
 		}
 	}
 	@media all and (max-width: 900px) {
-		.name-location-link {
+		.name-netnode-location-link {
 			flex-direction: column !important;
 			width: 18em !important;
 			div {
