enhancement: 'without start date' assignment filter added in customer search form

--- a/templates/default/customer/customersearch.html
+++ b/templates/default/customer/customersearch.html
@@ -483,6 +483,7 @@
 				<option value="90">{trans('expire in $a days', 90)}</option>
 				<option value="-100">{trans('expire in indicated number of days')}</option>
 				<option value="-1">{trans('without end date')}</option>
+				<option value="-10">{trans('without start date')}</option>
 				<option value="-2">{trans('active')}</option>
 				<option value="-7">{trans('active, without nodes')}</option>
 				<option value="-3">{trans('active, with invoice')}</option>
