--- a/templates/default/user/userpasswd.html
+++ b/templates/default/user/userpasswd.html
@@ -3,25 +3,27 @@
 {block name=module_content}
 <!--// $Id$ //-->
 <h1>{$layout.pagetitle|escape}</h1>
-<form method="POST" action="{if $target}{$target}{else}?m=userpasswd&id={$passwd.id}{/if}{if !empty($net)}&net=1{/if}" name="password">
+<form method="POST" action="{if $target}{$target}{else}?m=userpasswd&id={$passwd.id}{/if}{if !empty($net)}&net={$net}{/if}" name="password">
 <input type="submit" class="hiddenbtn">
 <table class="lmsbox">
 	<thead>
 		<tr>
-			<td colspan="2" class="nobr">
+			<td colspan="2" class="nobr bold">
 				{icon name="password"}
-				<strong>
-					{if empty($net)}
-						{trans("Enter new password")}
-					{else}
-						{trans("Enter new network password")}
-					{/if}
-				</strong>
+				{if ($net == 2)}
+					{trans("Change API key")}
+				{elseif ($net == 1)}
+					{trans("Enter new network password")}
+				{else}
+					{trans("Enter new password")}
+				{/if}
 			</td>
 		</tr>
 	</thead>
 	<tbody>
-		{if (!$net && isset($current_password_required)) || ($net && !empty($passwd.netpasswd))}
+		{if (!$net && isset($current_password_required))
+			|| ($net == 1 && !empty($passwd.netpasswd)
+			|| ($net == 2 && !empty($passwd.apikey)))}
 			<tr>
 				<td class="text-right nobr">
 					<strong>{trans("Current password")}</strong>
@@ -33,16 +35,29 @@
 			</tr>
 		{/if}
 		<tr>
-			<td class="text-right nobr">
-				<strong>{trans("New password")}</strong>
+			<td class="text-right nobr bold">
+				{if $net == "2"}
+					{trans("Enter new API key")}
+				{elseif ($net == "1")}
+					{trans("Enter new network password")}
+				{else}
+					{trans("New password")}
+				{/if}
 			</td>
 			<td class="nobr">
-				<input type="password" name="password[passwd]"{if !$net} required{/if} {tip trigger="passwd"} autocomplete="new-password">
+				<input type="password" name="password[passwd]"{if !$net} required{/if}
+					{tip trigger="passwd"} autocomplete="new-password"{if $net == 2} minlength="16"{/if}>
 			</td>
 		</tr>
 		<TR>
-			<TD class="text-right nobr">
-				<strong>{trans("Repeat password")}</strong>
+			<TD class="text-right nobr bold">
+				{if $net == "2"}
+					{trans("Repeat new API key")}
+				{elseif ($net == "1")}
+					{trans("Repeat new network password")}
+				{else}
+					{trans("Repeat password")}
+				{/if}
 			</TD>
 			<TD class="nobr">
 				<input type="password" name="password[confirm]"{if !$net} required{/if} {tip text="Confirm password" trigger="passwd"} autocomplete="new-password">
