enhancement: 'phpui.allowed_link_technologies' and 'sidusis.allowed_link_technologies' with default empty values allow to limit link technology selection lists in user interface (small clenaup)

--- a/templates/default/node/nodesearchresults.html
+++ b/templates/default/node/nodesearchresults.html
@@ -126,7 +126,7 @@
 									</select>
 									<select id="linktype" onchange="change_linktype(this.options[this.selectedIndex].value)">
 										{foreach $_LINKTECHNOLOGIES as $linktype => $linktech}
-											<option value="{$linktype}"{if $linktype == $nodelinktype} selected{/if}>{$_LINKTYPES[$linktype]}</option>
+											<option value="{$linktype}">{$_LINKTYPES[$linktype]}</option>
 										{/foreach}
 									</select>
 									<select id="linktechnology">
