bugfix: missing quotes

--- a/templates/default/customer/customerassignmenthelper.html
+++ b/templates/default/customer/customerassignmenthelper.html
@@ -996,7 +996,7 @@
 
 				{if ($customernodes && count($customernodes)) || ($customernetdevnodes && count($customernetdevnodes)) || ($voipaccounts && count($voipaccounts))}
 				<tr id="a_checkall" style="display: none;">
-					<td colspan=2"></td>
+					<td colspan="2"></td>
 					<td>
 						<label>
 							<INPUT TYPE="checkbox" NAME="allbox" onchange="javascript:checkAllNodes();" VALUE="1">
