bugfix: user wasn't changed after checking assign-to-me checkbox

--- a/templates/default/rt/rtnoteadd.html
+++ b/templates/default/rt/rtnoteadd.html
@@ -319,6 +319,7 @@
 			} else {
 				select.val($(this).attr('data-old-userid'));
 			}
+			updateAdvancedSelects(select);
 		});
 
 		$('body').on('change', '.template-selector', function() {
