--- a/templates/default/customer/customereditbox.html
+++ b/templates/default/customer/customereditbox.html
@@ -767,7 +767,8 @@
 		});
 
 		$('#icexpires-indefinitely').change(function() {
-			$('#icexpires').datepicker("option", "disabled", $(this).prop('checked'));
+			var checked = $(this).prop('checked');
+			$('#icexpires').datepicker("option", "disabled", checked).closest('.lms-ui-date-container').prev().prop('disabled', checked);
 		}).change();
 
 		var inSubmit = false;
