enhancement: uke/sidusis: implemented investment project csv export (fixed typo in field label)

--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -2379,7 +2379,7 @@
 					{icon name="money" class="fa-fw"}
 				</td>
 				<td class="nobr">
-					<strong>{trans("Investment proejcts")}</strong>
+					<strong>{trans("Investment projects")}</strong>
 				</td>
 				<td>
 					<select name="projects[]" form="sidusis-form" required
