enhancement: implemented inline customer note modifications (polished ui text labels)

--- a/templates/default/customer/customernotes.html
+++ b/templates/default/customer/customernotes.html
@@ -76,19 +76,19 @@
                 <thead>
                     <tr>
                         <th class="nobr text-center" data-searchable="false" data-select-value="false">
-                            {trans("Creation date")}
+                            {trans("<!customer-note>Created")}
                         </th>
                         <th class="nobr text-center" data-searchable="true" data-select-value="true" data-filter-id="user-filter">
-                            {trans("Created by")}
+                            {trans("<!customer-note>Creator")}
                         </th>
                         <th class="nobr text-center" data-searchable="false" data-select-value="false">
-                            {trans("Last modification")}
+                            {trans("<!customer-note>Modified")}
                         </th>
                         <th class="nobr text-center" data-searchable="true" data-select-value="true" data-filter-id="moduser-filter">
-                            {trans("Last modified by")}
+                            {trans("<!customer-note>Modifier")}
                         </th>
                         <th class="nobr text-left" data-orderable="false" data-searchable="true" data-select-value="false" data-filter-id="note-filter">
-                            {trans("Note")}
+                            {trans("<!customer-note>Contents")}
                         </th>
                         <th data-searchable="false" data-sortable="false">
                             &nbsp;
