bugfix: use 'trigger' parameter support for smarty function {customerlist} in voip account add and edit forms to signalize customer status problem

--- a/templates/default/voipaccount/voipaccountaddbox.html
+++ b/templates/default/voipaccount/voipaccountaddbox.html
@@ -195,6 +195,7 @@
                                                         selectname="voipaccountdata[customerid]"
                                                         inputname="voipaccountdata[ownerid]"
                                                         selecttip="Assign VoIP account to customer"
+                                                        trigger="voipaccountdata[ownerid]"
                                                         customOnChange="change_customer();"
                                                         required=true
                                                         version=2
