--- a/templates/default/voipaccount/voipaccounteditbox.html
+++ b/templates/default/voipaccount/voipaccounteditbox.html
@@ -217,6 +217,7 @@
                                                     selected=$voipaccountinfo.ownerid
                                                     selectname="voipaccountedit[customerid]"
                                                     inputname="voipaccountedit[ownerid]"
+                                                    trigger="voipaccountedit[ownerid]"
                                                     customOnChange="customer_change();"
                                                     required=true
                                                     version=2
