improvement: uke/pit: allow to select dash character type used in exported csv files for link technology names

--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -2030,6 +2030,20 @@
 		</tr>
 		<tr>
 			<td>
+				{icon name="configuration" class="fa-fw"}
+			</td>
+			<td class="nobr">
+				<strong>{trans("<!uke-pit>Dash character")}</strong>
+			</td>
+			<td>
+				<select size="1" name="dash-character" form="uke-pit">
+					<option value="pit">pit.uke.gov.pl</option>
+					<option value="inwentaryzacja">inwentaryzacja.uke.gov.pl</option>
+				</select>
+			</td>
+		</tr>
+		<tr>
+			<td>
 				{icon name="division" class="fa-fw"}
 			</td>
 			<td class="nobr">
