--- a/templates/default/node/nodeaddbox.html
+++ b/templates/default/node/nodeaddbox.html
@@ -119,7 +119,7 @@
 										</td>
 										<td class="cell-flex">
 											<div>
-												<input type="text" name="nodedata[ipaddr]" value="{$nodedata.ipaddr}" required
+												<input type="text" name="nodedata[ipaddr]" id="ipaddr" value="{$nodedata.ipaddr}" required
 													placeholder="{trans("IP address")}"
 													{tip trigger="ipaddr"}>
 												{button type="link" onClick="return ipchoosewin({
