--- a/templates/default/node/nodeeditbox.html
+++ b/templates/default/node/nodeeditbox.html
@@ -135,7 +135,7 @@
 										</td>
 										<td class="cell-flex">
 											<div>
-												<input type="text" name="nodeedit[ipaddr]" value="{$nodeinfo.ipaddr}" required
+												<input type="text" name="nodeedit[ipaddr]" id="ipaddr" value="{$nodeinfo.ipaddr}" required
 													{tip trigger="ipaddr"}>
 												{button type="link" onClick="return ipchoosewin({
 														ipelem: document.editnode['nodeedit[ipaddr]'],
