--- a/userpanel/style/bclean/templates/login.html
+++ b/userpanel/style/bclean/templates/login.html
@@ -105,7 +105,7 @@
                                 <div class="toast-header bg-light">
                                     <span class="badge badge-warning mr-1">&nbsp;</span>
                                     <strong class="mr-auto">{trans("Notification")}</strong>
-                                    {button class="ml-2 mb-1 close" data-dismiss="toast" label="&times;"}
+                                    {button class="ml-2 mb-1 close" data-dismiss="toast" text="&times;"}
                                 </div>
                                 <div class="toast-body">
                                     {$error}
