enhancement: show link properties (type and technology) in node details popup of openlayers map

--- a/css/map.less
+++ b/css/map.less
@@ -118,6 +118,12 @@ div.lms-ui-map-info-popup-details {
 	clear: both;
 }
 
+div.lms-ui-map-info-popup-details-list {
+  display: inline-flex;
+  flex-direction: column;
+  margin-left: 0.3em;
+}
+
 div.lms-ui-map-popup-contents {
 	border: @frame;
 	background-color: @light;
