improvement/cleanup: uke/pit: only true ascii dash is supported now by UKE PIT service.; they still can't make sanitization/normalisation of dash character in access technology names

--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -2028,7 +2028,7 @@
 				</label>
 			</td>
 		</tr>
-		<tr>
+		<tr style="display: none;">
 			<td>
 				{icon name="configuration" class="fa-fw"}
 			</td>
@@ -2038,7 +2038,7 @@
 			<td>
 				<select size="1" name="dash-character" form="uke-pit">
 					<option value="pit">pit.uke.gov.pl</option>
-					<option value="inwentaryzacja">inwentaryzacja.uke.gov.pl</option>
+					<option value="inwentaryzacja" selected>inwentaryzacja.uke.gov.pl</option>
 				</select>
 			</td>
 		</tr>
