enhancement: uke/pit: optional validation of wireless network links

--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -2148,6 +2148,20 @@
 		</tr>
 		<tr>
 			<td>
+				{icon name="wireless" class="fa-fw"}
+			</td>
+			<td class="nobr">
+				<label for="uke-pit-validate-wireless-links">
+					<strong>{trans("<!uke-pit>Validate wireless links")}</strong>
+				</label>
+			</td>
+			<td>
+				<input type="checkbox" name="validate-wireless-links" form="uke-pit"
+					id="uke-pit-validate-wireless-links" value="1" checked>
+			</td>
+		</tr>
+		<tr>
+			<td>
 				{icon name="reload" class="fa-fw"}
 			</td>
 			<td class="nobr">
